--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,29 @@
-<section class="section-about text-center">
-  <h2 class="heading-secondary">
-    Exciting tours for adventurous poeple
-  </h2>
+<section class="section-about">
+  <div class="text-center u-margin-bottom-big">
+    <h2 class="heading-secondary">
+      Exciting tours for adventurous poeple
+    </h2>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+      <p class="paragraph">
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
 
+      </p>
+      <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+      <p class="paragraph">
+          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+
+      </p>
+      <a href="#" class="btn-text">Learn more &rarr;</a>
+    </div>
+    <div class="col-6">
+      asdasdasd
+    </div>
+  </div>
 </section>
