--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,4 +1,6 @@
 @import "../../styles.scss";
+@import"../scss_utilities/utilities.scss";
+@import"../scss_utilities/buttons.scss";
 
 .section-about{
  background-color: $color-grey-light-1;
@@ -21,5 +23,19 @@
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: .5rem 1rem 2rem rgba($color-dark, .2);
+  }
+}
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
   }
 }
