--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,8 +5,8 @@
     </h2>
   </div>
   <div class="row">
-    <div class="col-6">
-      <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+    <div class="col-6 px-5">
+      <h3 class=" heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
       <p class="paragraph">
         lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
         lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
@@ -22,8 +22,12 @@
       </p>
       <a href="#" class="btn-text">Learn more &rarr;</a>
     </div>
-    <div class="col-6">
-      asdasdasd
+    <div class="col-6 px-5">
+      <div class="composition">
+        <img src="assets/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+        <img src="assets/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+        <img src="assets/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+      </div>
     </div>
   </div>
 </section>
