--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,85 @@
 <div class="header">
-  <div class="header__logo-box">
-    <img src="../../assets/logo-white.png" alt="Logo" class="header__logo">
-  </div>
+  <!-- <div class="header__logo-box ">
+    <img src="../../assets/reoflex.png" class="header__logo">
+  </div> -->
   <div class="header__text-box">
-  <h1 class="heading-primary">
-    <span class="heading-primary--main">KUZNIK paint</span>
-    <span class="heading-primary--sub">farby wyjebane w kosmos</span>
-  </h1>
-  <a href="#" class="btn btn--white btn--animated">Spradź naszą ofertę</a>
+    <h1 class="heading-primary">
+      <span class="heading-primary--main">Reoflex</span>
+      <span class="heading-primary--sub">materiały lakiernicze</span>
+    </h1>
+    <a href="#" class="btn btn--white btn--animated">oferta</a>
   </div>
 </div>
+<section class="section-tours">
+    <div class="text-center u-margin-bottom-big">
+      <h2 class="heading-secondary">
+        Nasze oferta handlowa
+      </h2>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 px-5">
+        <div class="rotate_card">
+          <div class="rotate_card__side rotate_card__side--front">
+            <div class="rotate_card__picture rotate_card__picture--1">
+              &nbsp;
+            </div>
+            <h4 class="rotate_card__heading">
+              <span class="rotate_card__heading-span rotate_card__heading-span">
+                  <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                Farby
+              </span>
+            </h4>
+            <div class="rotate_card__details">
+              Details
+            </div>
+          </div>
+          <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+            asdasdasdasd
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 px-5">
+          <div class="rotate_card">
+            <div class="rotate_card__side rotate_card__side--front">
+              <div class="rotate_card__picture rotate_card__picture--1">
+                &nbsp;
+              </div>
+              <h4 class="rotate_card__heading">
+                <span class="rotate_card__heading-span rotate_card__heading-span">
+                    <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                  Materiały
+                </span>
+              </h4>
+              <div class="rotate_card__details">
+                Details
+              </div>
+            </div>
+            <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+              asdasdasdasd
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 px-5">
+            <div class="rotate_card">
+              <div class="rotate_card__side rotate_card__side--front">
+                <div class="rotate_card__picture rotate_card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="rotate_card__heading">
+                  <span class="rotate_card__heading-span rotate_card__heading-span">
+                      <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                    INNE elementy
+                  </span>
+                </h4>
+                <div class="rotate_card__details">
+                  Details
+                </div>
+              </div>
+              <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+                asdasdasdasd
+              </div>
+            </div>
+          </div>
+    </div>
+
+  </section>
