--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,7 +5,7 @@
     </h2>
   </div>
   <div class="row">
-    <div class="col-6 px-5">
+    <div class="col-lg-6 col-md-12 px-5">
       <h3 class=" heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
       <p class="paragraph">
         lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
@@ -15,14 +15,14 @@
       </p>
       <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
       <p class="paragraph">
-          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
-          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
-          lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
+        lorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdaslorem isasfdas
 
       </p>
       <a href="#" class="btn-text">Learn more &rarr;</a>
     </div>
-    <div class="col-6 px-5">
+    <div class="col-lg-6 col-md-12 px-5">
       <div class="composition">
         <img src="assets/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
         <img src="assets/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
@@ -30,4 +30,80 @@
       </div>
     </div>
   </div>
+</section>
+<section class="section-features">
+  <div class="row">
+    <div class="col-lg-3 px-5">
+      <div class="feature-box">
+        <i class=" feature-box__icon fas fa-globe"></i>
+        <h3 class="heading-tertiary">Explore the world</h3>
+        <p class="feature-box__text">
+          LLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum
+          lorem ipsim
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-3 px-5">
+      <div class="feature-box">
+        <i class=" feature-box__icon fas fa-globe"></i>
+        <h3 class="heading-tertiary">Explore the world</h3>
+        <p class="feature-box__text">
+          LLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum
+          lorem ipsim
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-3 px-5">
+      <div class="feature-box">
+        <i class=" feature-box__icon fas fa-globe"></i>
+        <h3 class="heading-tertiary">Explore the world</h3>
+        <p class="feature-box__text">
+          LLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum
+          lorem ipsim
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-3 px-5">
+      <div class="feature-box">
+        <i class=" feature-box__icon fas fa-globe"></i>
+        <h3 class="heading-tertiary">Explore the world</h3>
+        <p class="feature-box__text">
+          LLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum lorem ipsimLLorem ipsum
+          lorem ipsim
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="section-tours">
+  <div class="text-center u-margin-bottom-big">
+    <h2 class="heading-secondary">
+      Exciting tours for adventurous poeple
+    </h2>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 px-5">
+      <div class="rotate_card">
+        <div class="rotate_card__side rotate_card__side--front">
+          <div class="rotate_card__picture rotate_card__picture--1">
+            &nbsp;
+          </div>
+          <h4 class="rotate_card__heading">
+            <span class="rotate_card__heading-span rotate_card__heading-span--1">
+              The Sea Explorer
+            </span>
+          </h4>
+          <div class="rotate_card__details">
+            Details
+          </div>
+        </div>
+        <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+          asdasdasdasd
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
