--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,24 +1,44 @@
 @import "../../styles.scss";
 @import"../scss_utilities/utilities.scss";
 @import"../scss_utilities/buttons.scss";
+@import"../scss_utilities/card.scss";
 
 .section-about{
- background-color: $color-grey-light-1;
- padding: 25rem 0;
- margin-top: -20vh;
+ background-color: $color-primary;
+ padding: 20rem 0;
+//  margin-top: -20vh;
 }
+
+.section-features{
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8) ), url(../../assets//nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-5deg);
+
+  & > *
+  {
+    transform: skewY(5deg);
+  }
+
+ }
+
+ .section-tours{
+  background-color: $color-grey-light-1;
+ }
+
 
 .heading-secondary {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark );
+  background-image: linear-gradient(to right, $color-grey-light-1, $color-white );
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -44,6 +64,7 @@
   position: relative;
 
   &__photo {
+    z-index: 10;
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-dark, .4);
     border-radius: 2px;
@@ -53,7 +74,7 @@
 
     &--p1 {
       left: 0;
-      top: -2rem;
+      top: 0;
 
     }
 
@@ -79,4 +100,28 @@
   &:hover &__photo:not(:hover) {
     transform: scale(.95)
 ;  }
+}
+
+.feature-box {
+  background-color: rgba($color-white, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-dark, .15);
+  transition: transform .3s;
+
+  &__icon {
+    font-size: 6rem;
+    margin-bottom: 1.5rem;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+  }
 }
