--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,18 @@
-$color-primary: #55c57a;
+$color-primary: #ffe22e;;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
+$color-secondary-light: #ffbb33;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
 
 $color-grey-dark: #777;
 $color-white: #fff;
-$color-dark: #000;
+$color-dark: #212121;
 
 
 *, *::before, *::after {
@@ -19,11 +25,31 @@ html {
 }
 
 body {
+  background-color: $color-dark !important;
   font-family: "Lato", sans-serif !important;
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
-  color: #777;
-  padding: 3rem;
+  // padding: 3rem;
   box-sizing: border-box;
+}
+
+.navbar {
+  padding: 10px !important;
+  background-image: linear-gradient(to right, rgba($color-primary, 1),rgba($color-primary, 0.1));
+
+}
+.top-nav-collapse {
+  padding: 5px 0 !important;
+}
+@media (max-width: 768px) {
+  .navbar:not(.top-nav-collapse) {
+    background-color: $color-white;
+    // padding: 20px 0 !important;
+  }
+}
+@media (min-width: 800px) and (max-width: 991px) {
+  .navbar:not(.top-nav-collapse) {
+    background-color: $color-white;
+  }
 }
