--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
       </h2>
     </div>
     <div class="row">
-      <div class="col-lg-4 px-5">
+      <div class="col-lg-2 px-3">
         <div class="rotate_card">
           <div class="rotate_card__side rotate_card__side--front">
             <div class="rotate_card__picture rotate_card__picture--1">
@@ -26,7 +26,7 @@
             <h4 class="rotate_card__heading">
               <span class="rotate_card__heading-span rotate_card__heading-span">
                   <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
-                Farby
+                Materiały ścierne
               </span>
             </h4>
             <div class="rotate_card__details">
@@ -34,11 +34,11 @@
             </div>
           </div>
           <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
-            asdasdasdasd
+              <img src="../../assets/reoflex.png" class="header__logo">
           </div>
         </div>
       </div>
-      <div class="col-lg-4 px-5">
+      <div class="col-lg-2 px-3">
           <div class="rotate_card">
             <div class="rotate_card__side rotate_card__side--front">
               <div class="rotate_card__picture rotate_card__picture--1">
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 px-5">
+        <div class="col-lg-2 px-3">
             <div class="rotate_card">
               <div class="rotate_card__side rotate_card__side--front">
                 <div class="rotate_card__picture rotate_card__picture--1">
@@ -80,6 +80,69 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-2 px-3">
+              <div class="rotate_card">
+                <div class="rotate_card__side rotate_card__side--front">
+                  <div class="rotate_card__picture rotate_card__picture--1">
+                    &nbsp;
+                  </div>
+                  <h4 class="rotate_card__heading">
+                    <span class="rotate_card__heading-span rotate_card__heading-span">
+                        <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                      INNE elementy
+                    </span>
+                  </h4>
+                  <div class="rotate_card__details">
+                    Details
+                  </div>
+                </div>
+                <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+                  asdasdasdasd
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 px-3">
+                <div class="rotate_card">
+                  <div class="rotate_card__side rotate_card__side--front">
+                    <div class="rotate_card__picture rotate_card__picture--1">
+                      &nbsp;
+                    </div>
+                    <h4 class="rotate_card__heading">
+                      <span class="rotate_card__heading-span rotate_card__heading-span">
+                          <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                        INNE elementy
+                      </span>
+                    </h4>
+                    <div class="rotate_card__details">
+                      Details
+                    </div>
+                  </div>
+                  <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+                    asdasdasdasd
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 px-3">
+                  <div class="rotate_card">
+                    <div class="rotate_card__side rotate_card__side--front">
+                      <div class="rotate_card__picture rotate_card__picture--1">
+                        &nbsp;
+                      </div>
+                      <h4 class="rotate_card__heading">
+                        <span class="rotate_card__heading-span rotate_card__heading-span">
+                            <mdb-icon size="3x" class="rotate_card__heading-icon" fas icon="palette"></mdb-icon><br>
+                          INNE elementy
+                        </span>
+                      </h4>
+                      <div class="rotate_card__details">
+                        Details
+                      </div>
+                    </div>
+                    <div class="rotate_card__side rotate_card__side--back rotate_card__side--back-1">
+                      asdasdasdasd
+                    </div>
+                  </div>
+                </div>
     </div>
 
   </section>
