--- a/src/app/scss_utilities/card.scss
+++ b/src/app/scss_utilities/card.scss
@@ -4,10 +4,10 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 30rem;
+  height: 2rem;
 
   &__side {
-    height: 30rem;
+    height: 20rem;
     transition: all .8s ease;
     position: absolute;
     width: 100%;
@@ -48,21 +48,22 @@
     border-top-right-radius: 3px;
 
     &--1 {
-      background-color: $color-primary;
+      background-image: linear-gradient(to right bottom, rgba($color-white, 0.1), rgba($color-white, 0.3) ), url(../../assets//hero.jpg);
     }
   }
 
   &__heading {
-    font-size: 2.8rem;
+    background-image: linear-gradient(to right bottom, rgba($color-primary, 0.6), rgba($color-primary, 0.9) );
+    padding: 1rem 1rem;
+    font-size: 1.6rem;
     font-weight: 300;
     line-height: 1.6;
     text-transform: uppercase;
     text-align: center;
     color: $color-dark;
     position: absolute;
-    top: 50%;
-    right: 50%;
-    transform: translateX(50%) translateY(-50%);
+    bottom: 0%;
+    right: 0%;
   }
 
 }
